--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "server": "tsx watch server.ts",
     "client": "vite",
-    "dev": "vite concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "vite build",
     "preview": "vite preview"
   },
