--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.14",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/react": "^18.2.43",
@@ -27,6 +28,7 @@
     "@vercel/node": "^2.3.0",
     "@vitejs/plugin-react": "^5.0.4",
     "concurrently": "^8.2.2",
+    "tailwindcss": "^4.1.14",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vite": "^7.1.10"
