--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "path-to-regexp": "^8.3.0",
     "rc-slider": "^11.1.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.14",
@@ -25,6 +26,7 @@
     "@types/express": "^4.17.21",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-router-dom": "^5.3.3",
     "@vercel/node": "^2.3.0",
     "@vitejs/plugin-react": "^5.0.4",
     "concurrently": "^8.2.2",
