--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
