--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
