--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^12.5.0",
     "node-fetch": "^3.3.2",
     "path-to-regexp": "^8.3.0",
     "rc-slider": "^11.1.9",
