--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vitejs/plugin-react": "^5.0.4",
     "concurrently": "^8.2.2",
     "tailwindcss": "^4.1.16",
+    "terser": "^5.44.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vite": "^7.1.10"
