--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,40 @@
+# Environment variables
 .env
-node_modules
 .env.local
 .env.production
+.env.development
+.env.*.local
+
+# But allow the template
+!.env.example
+
+# Dependencies
+node_modules
+
+# Build outputs
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Vercel
+.vercel
