--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "buffer": "^6.0.3",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^12.5.0",
+    "gray-matter": "^4.0.3",
+    "marked": "^16.4.1",
     "node-fetch": "^3.3.2",
     "path-to-regexp": "^8.3.0",
     "rc-slider": "^11.1.9",
