--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     "concurrently": "^8.2.2",
     "tailwindcss": "^4.1.16",
     "terser": "^5.44.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3",
+    "typescript": "^5.9.3",
     "vite": "^7.1.10"
   }
 }
