--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vercel/node": "^2.3.0",
     "@vitejs/plugin-react": "^5.0.4",
     "concurrently": "^8.2.2",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.16",
     "terser": "^5.44.0",
     "ts-node": "^10.9.2",
