--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "buffer": "^6.0.3",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
+    "embla-carousel-react": "^8.6.0",
     "express": "^4.18.2",
     "firebase": "^12.5.0",
     "gray-matter": "^2.0.1",
