--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "embla-carousel-react": "^8.6.0",
     "express": "^4.18.2",
     "firebase": "^12.5.0",
+    "framer-motion": "^12.23.24",
     "gray-matter": "^2.0.1",
     "marked": "^16.4.1",
     "node-fetch": "^3.3.2",
