--- a/package.json
+++ b/package.json
@@ -14,19 +14,25 @@
     "@vercel/speed-insights": "^1.2.0",
     "buffer": "^6.0.3",
     "cheerio": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.18.2",
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "gray-matter": "^2.0.1",
+    "lucide-react": "^0.555.0",
     "marked": "^16.4.1",
+    "motion": "^12.23.24",
+    "next": "^16.0.6",
     "node-fetch": "^3.3.2",
     "path-to-regexp": "^8.3.0",
     "rc-slider": "^11.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.16",
@@ -43,6 +49,7 @@
     "terser": "^5.44.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "vite": "^7.1.10",
     "vite-plugin-pwa": "^1.2.0"
