--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lucide-react": "^0.555.0",
     "marked": "^16.4.1",
     "motion": "^12.23.24",
-    "next": "^16.0.6",
+    "next": "16.0.7",
     "node-fetch": "^3.3.2",
     "path-to-regexp": "^8.3.0",
     "rc-slider": "^11.1.9",
