--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "client": "vite",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "verify-api": "node scripts/verify-api.js && tsc --noEmit -p tsconfig.api.json",
+    "predeploy": "npm run verify-api"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
